Commit with some commented code using multiple testers. Multiple testers approach doesn't work because each call to initialize creates a user with the same name. This leads to a conflict and multiple values are returned every time an attribute of that user is queried.